--- a/account.ui/src/app/accounts/accounts.component.html
+++ b/account.ui/src/app/accounts/accounts.component.html
@@ -1,29 +1,31 @@
 <!-- src/app/accounts/accounts.component.html -->
 <div class="container-fluid">
-   <div class="row">
-      <div class="col text-start">
-       <h3>Accounts</h3>
-      </div>
-      <div class="col text-end">
-       <button class="btn btn-secondary bi bi-plus-square" (click)="addAccount()"></button>
-      </div>
-   </div>
+  <div class="row">
+    <div class="col text-start">
+      <h3>Accounts</h3>
+    </div>
+    <div class="col text-end">
+      <button class="btn btn-secondary bi bi-plus-square" (click)="addAccount()"></button>
+    </div>
+  </div>
 </div>
-<div class="accountlist table-responsive" *ngIf="isAccounts()">
-   <table class="table table-striped table-sm">
+@if (isAccounts()) {
+  <div class="accountlist table-responsive">
+    <table class="table table-striped table-sm">
       <thead class="thead-inverse">
-         <tr><th>Name</th>
-            <th>Address</th>
-            <th>Code</th>
-            <th>Currency</th>
-            <th>Format</th>
-            <th>Telephone</th>
-            <th>StatementRef</th>
-            <th>Order</th> 
-            <th class="account-edit"></th></tr>
+        <tr><th>Name</th>
+        <th>Address</th>
+        <th>Code</th>
+        <th>Currency</th>
+        <th>Format</th>
+        <th>Telephone</th>
+        <th>StatementRef</th>
+        <th>Order</th>
+        <th class="account-edit"></th></tr>
       </thead>
       <tbody>
-         <tr *ngFor="let ta of accounts">
+        @for (ta of accounts; track ta) {
+          <tr>
             <td class="">{{ta.name}}</td>
             <td>{{ta.address}}</td>
             <td class="nowrap">{{ta.code}}</td>
@@ -33,9 +35,11 @@
             <td class="nowrap">{{ta.statementref}}</td>
             <td>{{ta.order}}</td>
             <td class="account-edit">
-               <button class="acc-table-btn" (click)="editAccount(ta)"><i class="bi bi-pencil-square"></i></button>
+              <button class="acc-table-btn" (click)="editAccount(ta)"><i class="bi bi-pencil-square"></i></button>
             </td>
-         </tr>
+          </tr>
+        }
       </tbody>
-   </table>
-</div>
+    </table>
+  </div>
+}
