--- a/account.ui/src/app/transferaccounts/transferaccounts.component.html
+++ b/account.ui/src/app/transferaccounts/transferaccounts.component.html
@@ -1,31 +1,35 @@
 <!-- src/app/transferaccounts/transferaccounts.component.html -->
 <div class="container-fluid">
-   <div class="row">
-      <div class="col text-start">
-       <h3>Transfer Accounts</h3>
-      </div>
-      <div class="col text-end">
-       <button class="btn btn-secondary bi bi-plus-square" (click)="addTransferAccount()"></button>
-      </div>
-   </div>
+  <div class="row">
+    <div class="col text-start">
+      <h3>Transfer Accounts</h3>
+    </div>
+    <div class="col text-end">
+      <button class="btn btn-secondary bi bi-plus-square" (click)="addTransferAccount()"></button>
+    </div>
+  </div>
 </div>
 
-<div class="transferaccountlist table-responsive" *ngIf="isTransferAccounts()">
-   <table class="table table-striped table-sm">
+@if (isTransferAccounts()) {
+  <div class="transferaccountlist table-responsive">
+    <table class="table table-striped table-sm">
       <thead class="thead-inverse">
-         <tr><th>Name</th><th>Account</th><th>Memo</th><th>Order</th><th>RAcc</th><th class="account-edit"></th></tr>
+        <tr><th>Name</th><th>Account</th><th>Memo</th><th>Order</th><th>RAcc</th><th class="account-edit"></th></tr>
       </thead>
       <tbody>
-         <tr *ngFor="let ta of transferAccounts">
+        @for (ta of transferAccounts; track ta) {
+          <tr>
             <td class="">{{ta.cptyAccountName}}</td>
             <td class="nowrap">{{ta.cptyAccountNumber}}</td>
             <td>{{ta.lastCommunication}}</td>
             <td>{{ta.order}}</td>
             <td class="nowrap">{{ta.relatedAccountName}}</td>
             <td class="account-edit">
-               <button class="acc-table-btn" (click)="editTransferAccount(ta)"><i class="bi bi-pencil-square"></i></button>
+              <button class="acc-table-btn" (click)="editTransferAccount(ta)"><i class="bi bi-pencil-square"></i></button>
             </td>
-         </tr>
+          </tr>
+        }
       </tbody>
-   </table>
-</div>
+    </table>
+  </div>
+}
